# task-printer

./: .gitignore  CLAUDE.md  everything.json  mypy.ini  pyproject.toml  task.html
prompts/system/: test.md
prompts/task/: file-task.md
src/: get_auth_token.py  get_focus_tasks.py  main.py  print_html_file.py  print_html_file_test.py  print_text_file.py  print_text_file_test.py  task_printer.py
src/print_task_from_text_file/: _test.py  main.py
test/: test_task_printer.py
